less/site.less
@h2_font_size: 1.5rem;
@font_size: 1.1rem;
@heading_font_family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@body_font_family: 'Times New Roman', Times, serif;

@body_padding: 5%;
@area_padding: 10px;
@area_vertical_margin: 2px;
@calendar_cell_padding: 4px;
@calendar_cell_button_padding: 2px;
@select_button_padding: 0.8rem;

@success_color: #60d360;
@error_color: #ffcccc;
@free_calendar_color: #f0f0f0;
@taken_calendar_color: #e0e0e0;
@sunday_border_bottom_color: black;
@day_border_bottom_color: #cfcfcf;
@heading_color: #1a0dab;

html {
    -webkit-text-size-adjust: none;
}

body {
    margin-left: @body_padding;
    margin-right: @body_padding;
}

input, div, p, li, button {
    font-size: @font_size;
    font-family: @body_font_family;
}

h1 {
    font-family: @heading_font_family;
    color: @heading_color;
}


h2 {
    font-family: @heading_font_family;
    font-size: @h2_font_size;
    font-weight: bold;
    color: @heading_color;
}

h3 {
    font-family: @heading_font_family;
    font-size: @font_size;
    font-weight: bold;
    color: @heading_color;
}

h4 {
    font-family: @heading_font_family;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    font-size: @font_size;
    font-weight: bold;
}

button {
    font-size: @font_size;
}

.logout_header {
    display: flex;
    display: -ms-flexbox;
    flex-flow: row nowrap;
    -ms-flex-flow: row nowrap;
    justify-content: flex-end;
    -ms-justify-content: flex-end;
}

.push_right {
    flex: 1 1 auto;
    -ms-flex: 1 1 auto;
}

.logout_link {
    flex: 0 1 auto;
    -ms-flex: 0 1 auto;
}

.error_status_area {
    margin-top: @area_padding;
    padding: @area_padding;
    background-color: @error_color;
}

.success_status_area {
    margin-top: @area_padding;
    padding: @area_padding;
    background-color: @success_color;
}

.selected_days_area, .contact_entry {
    display: flex;
    display: -ms-flexbox;
    flex-flow: row wrap;
    -ms-flex-flow: row wrap;
    margin-bottom: @area_vertical_margin;
}

.selected_days_title, .contact_title {
    flex: 0 1 15em;
    -ms-flex: 0 1 15em;
}

.selected_days_selections {
    flex: 2 0 auto;
    -ms-flex: 2 0 auto;
    flex-flow: column nowrap;
    -ms-flex-flow: column nowrap;
}

.contact_input {
    flex: 2 0 auto;
    -ms-flex: 2 0 auto;
}

.contact_input_bad {
    flex: 2 0 auto;
    -ms-flex: 2 0 auto;
    background-color: @error_color;
}

.select_button_container {
    padding-top: @select_button_padding;
    padding-bottom: @select_button_padding;
}

.calendar-container {
    display: flex;
    display: -ms-flexbox;
    flex-flow: row wrap;
    -ms-flex-flow: row wrap;
}

.calendar-month-table {
    border-spacing: 0px;
    padding-right: 10px;
}

.calendar-date-cell, .calendar-booking-cell {
    padding-left: @calendar_cell_padding;
    padding-right: @calendar_cell_padding;
    height: 2.5em;
    min-width: 5em;
    padding-top: @calendar_cell_padding;
    padding-bottom: @calendar_cell_padding;

    button {
        padding-top: @calendar_cell_button_padding;
        padding-bottom: @calendar_cell_button_padding;
    }

}

.calendar-day {
    border-bottom: 1px solid @day_border_bottom_color;
}

.calendar-sunday {
    border-bottom: 1px solid black;
}

.calendar-free {
    background-color: @free_calendar_color;
}

.calendar-taken {
    background-color: @taken_calendar_color;
}

.selection {
    margin-right: 10px;
}

